crates/ty_python_semantic/resources/mdtest/snapshots/metaclass.md_-_Diagnostic_range_(4940b37ce546ecbf).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: metaclass.md - Diagnostic range
mdtest path: crates/ty_python_semantic/resources/mdtest/metaclass.md
---

# Python source files

## mdtest_snippet.py

```
1 | def _(n: int):
2 |     # error: [invalid-metaclass]
3 |     class B(metaclass=n):
4 |         x = 1
5 |         y = 2
```

# Diagnostics

```
error[invalid-metaclass]: Metaclass of type `int` is not callable
 --> src/mdtest_snippet.py:3:13
  |
3 |     class B(metaclass=n):
  |             ^^^^^^^^^^^
  |
info: A `class` statement leads to an implicit call to the class's metaclass
info: See https://docs.python.org/3/reference/datamodel.html#metaclasses

```
